--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Carrito de imágenes</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
         </li>
         <li class="item">
           <div class="img"><img src="imgs/locche.jpg" alt="img" /></div>
-          <h2>Nicolino Locche/h2>
+          <h2>Nicolino Locche</h2>
           <span>Boxeador </span>
         </li>
         <li class="item">
