--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="superior">
+        <h1 class="h1">Figuras</h1>
+        <div class="botones">
+          <button class="arrow"><</button>
+          <button class="arrow">></button>
+        </div>
+      </div>
       <ul class="carousel">
         <li class="item">
           <div class="img"><img src="imgs/alf.jpg" alt="img" /></div>
