--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Carrito de imágenes</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
         </li>
         <li class="item">
           <div class="img"><img src="imgs/delpotro.jpg" alt="img" /></div>
-          <h2>Juan Martín Del Potro</h2>
+          <h2>Del Potro</h2>
           <span>Extenista </span>
         </li>
         <li class="item">
