--- a/index.html
+++ b/index.html
@@ -18,33 +18,45 @@
       </div>
       <ul class="carousel">
         <li class="item">
-          <div class="img"><img src="imgs/alf.jpg" alt="img" /></div>
+          <div class="img">
+            <img src="imgs/alf.jpg" alt="img" draggable="false" />
+          </div>
           <h2>Alf</h2>
           <span>Criatura sabionda y divertida</span>
         </li>
         <li class="item">
-          <div class="img"><img src="imgs/delpotro.jpg" alt="img" /></div>
+          <div class="img">
+            <img src="imgs/delpotro.jpg" alt="img" draggable="false" />
+          </div>
           <h2>Del Potro</h2>
           <span>Extenista </span>
         </li>
         <li class="item">
-          <div class="img"><img src="imgs/locche.jpg" alt="img" /></div>
+          <div class="img">
+            <img src="imgs/locche.jpg" alt="img" draggable="false" />
+          </div>
           <h2>Nicolino Locche</h2>
           <span>Boxeador </span>
         </li>
         <li class="item">
-          <div class="img"><img src="imgs/manu.jpg" alt="img" /></div>
-          <h2>Emanuel David Ginóbili</h2>
-          <span>Exjugador de baloncesto</span>
+          <div class="img">
+            <img src="imgs/manu.jpg" alt="img" draggable="false" />
+          </div>
+          <h2>Manu Ginóbili</h2>
+          <span>Jugador de basquet</span>
         </li>
         <li class="item">
-          <div class="img"><img src="imgs/maradona.jpg" alt="img" /></div>
-          <h2>Diego Armando Maradona</h2>
+          <div class="img">
+            <img src="imgs/maradona.jpg" alt="img" draggable="false" />
+          </div>
+          <h2>Diego Maradona</h2>
           <span>El diegote</span>
         </li>
         <li class="item">
-          <div class="img"><img src="imgs/messi.jpg" alt="img" /></div>
-          <h2>Lionel Andrés Messi</h2>
+          <div class="img">
+            <img src="imgs/messi.jpg" alt="img" draggable="false" />
+          </div>
+          <h2>Lionel Messi</h2>
           <span>GOAT</span>
         </li>
       </ul>
