--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="superior">
         <h1 class="h1">Figuras</h1>
         <div class="botones">
-          <button class="arrow"><</button>
-          <button class="arrow">></button>
+          <button class="arrow" id="izq"><</button>
+          <button class="arrow" id="der">></button>
         </div>
       </div>
       <ul class="carousel">
@@ -22,7 +22,7 @@
             <img src="imgs/alf.jpg" alt="img" draggable="false" />
           </div>
           <h2>Alf</h2>
-          <span>Criatura sabionda y divertida</span>
+          <span>Alien Life Form</span>
         </li>
         <li class="item">
           <div class="img">
@@ -58,6 +58,20 @@
           </div>
           <h2>Lionel Messi</h2>
           <span>GOAT</span>
+        </li>
+        <li class="item">
+          <div class="img">
+            <img src="imgs/guido.jpg" alt="img" draggable="false" />
+          </div>
+          <h2>Guido Kaczka</h2>
+          <span>Actor y conductor</span>
+        </li>
+        <li class="item">
+          <div class="img">
+            <img src="imgs/fangio.jpg" alt="img" draggable="false" />
+          </div>
+          <h2>Juan Manuel Fangio</h2>
+          <span>Piloto</span>
         </li>
       </ul>
     </div>
